--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,24 @@
+@import "~bootstrap/scss/bootstrap";
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  max-width: 576px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6, p, a {
+  text-decoration: none;
+  color: initial;
+  margin: 0;
+}
+
+.page {
+  width: 100%;
+  min-height: 70vh;
+  padding: 1rem .5rem;
 }
